@@ -1,5 +1,7 @@
 Changes file for DateTime::Incomplete
 
+- to_datetime() sets fields in a known order,
+  instead of hash-order.  Based on a patch by Rick Measham
 - Included has() method, contributed by Rick Measham
 
 
